[project]
name = "layoverlab"
version = "0.1.0"
description = "Creative cheapest-route flight finder"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "httpx>=0.27",
    "apscheduler>=3.10,<4",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "sse-starlette>=2.1",
    "tenacity>=8.3",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.4",
    "aiosqlite>=0.20",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["layoverlab*"]

[tool.setuptools.package-data]
layoverlab = ["seeds/data/*.csv", "engine/data/*.csv"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py312"
